--- a/text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex
@@ -129,3 +129,14 @@ A edição do registro é apresentada na \autoref{fig:drEdicaoPagamento}.
     \fonte{Autor}
     \label{fig:drEdicaoPagamento}
 \end{figure}
+
+\newpage
+Ao selecionar a opção de menu “Entregas” (\autoref{fig:drListaEntregas}) é possível visualizar todo o histórico de entregas já realizadas na aplicação. Nela estão presentes informações como o identificador, motoboy, status e os pedidos que compõem cada entrega. Botões para visualização, impressão da comanda, finalização (altera o \textit{status} da entrega para \textit{CONCLUDED}) e cancelamento (altera o \textit{status} da entrega para \textit{CANCELLED}) acompanham cada registro.
+
+ \begin{figure}[H]
+    \centering
+    \caption{Delivery Routes - Lista de entregas}
+    \includegraphics[width=1.0\textwidth]{./dados/figuras/fig26}
+    \fonte{Autor}
+    \label{fig:drListaEntregas}
+\end{figure}
