--- a/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
@@ -1,8 +1,10 @@
 \begin{figure}[H]
     \centering
     \caption{Delivery Routes - API - Coleta de dados}
-    \includegraphics[width=0.5\textwidth]{./dados/figuras/fig14}
-    %0.6 talvez
+    \includegraphics[width=0.6\textwidth]{./dados/figuras/fig14}
     \fonte{Autor}
     \label{fig:drPlacedAPI}
 \end{figure}
+
+%Os dados são apresentados quando, via método GET pelo endpoint ‘/api/v1/veículos/get_veiculos’, passar o token do cliente como parâmetro. Como resposta o servidor informa um objeto JSON com a lista dos veículos do cliente correspondente ao token, como mostra o trecho de código fonte a seguir:  
+ 
