--- a/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
@@ -1,3 +1,5 @@
+O modelo solicitado para integração via requisição do tipo \textit{GET} no endpoint \textit{“/orders/opened”} na API do software principal do estabelecimento é exemplificado na \autoref{fig:drPlacedAPI}. O retorno da consulta deve ser em formato JSON, dispostos no formato “chave”: “valor” e contendo os seguinte atributos documentados pelo administrador: \textit{id}, \textit{latitude}, \textit{longitude}, \textit{payment\_id}, \textit{totalPrice}, \textit{prepaid} e \textit{status}.
+
 \begin{figure}[H]
     \centering
     \caption{Delivery Routes - API - Coleta de dados}
@@ -5,6 +7,3 @@
     \fonte{Autor}
     \label{fig:drPlacedAPI}
 \end{figure}
-
-%Os dados são apresentados quando, via método GET pelo endpoint ‘/api/v1/veículos/get_veiculos’, passar o token do cliente como parâmetro. Como resposta o servidor informa um objeto JSON com a lista dos veículos do cliente correspondente ao token, como mostra o trecho de código fonte a seguir:  
- 
