--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -28,6 +28,6 @@ No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolv
 O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem de programação base, \textit{frameworks}, banco de dados e servidor web.
 
 %%% Original: No quarto capítulo é descrito o desenvolvimento da aplicação Delivery Routes, assim como todos os passos realizados no decorrer do trabalho: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
-No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Esse também, discorre acerca de todos os passos realizados no decorrer do trabalho, tais como: coleta dos dados, módulo de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Esse também, discorre acerca de todos os passos realizados no decorrer do trabalho, tais como: módulo de gerenciamento para controle das entregas, coleta dos dados e o posterior acompanhamento das rotas de entregas.
 
 Por fim, no quinto Capítulo são apresentadas as conclusões e as propostas para futuros trabalhos.
