--- a/referencias.bib
+++ b/referencias.bib
@@ -55,21 +55,21 @@
   Author                   = {Tiago Semprebom and Rômulo de Oliveira and Carlos Montez},
   Year                     = {2006},
   publisher={XII WEBMEDIA - Simpósio Brasileiro de Sistemas Multimídia e Web}
-  url={http://www.romulosilvadeoliveira.eng.br/artigos/Tiago-Romulo-Montez-Webmedia2006.pdf}
+  %url={http://www.romulosilvadeoliveira.eng.br/artigos/Tiago-Romulo-Montez-Webmedia2006.pdf}
 }
 
 @Article{apache:Marcelo,
   Title                    = {Análise do Servidor Web Apache em Clusters OpenMosix com Memória Compartilhada Distribuída},
   Author                   = {Marcelo Soares Souza},
   Year                     = {2004},
-  url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
+  %url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
 }
 
 @Article{mysql:ufpe,
   Title                    = {Comparativo de Desempenho entre Bancos de Dados de Código Aberto},
   Author                   = {Carlos E. S. Pires and Rilson O. Nascimento and Ana C. Salgado},
   Year                     = {2008},
-  url={https://www.researchgate.net/profile/Ana_Carolina_Salgado/publication/242213657_Comparativo_de_Desempenho_entre_Bancos_de_Dados_de_Codigo_Aberto/links/004635296426ba710e000000/Comparativo-de-Desempenho-entre-Bancos-de-Dados-de-Codigo-Aberto.pdf},
+  %url={https://www.researchgate.net/profile/Ana_Carolina_Salgado/publication/242213657_Comparativo_de_Desempenho_entre_Bancos_de_Dados_de_Codigo_Aberto/links/004635296426ba710e000000/Comparativo-de-Desempenho-entre-Bancos-de-Dados-de-Codigo-Aberto.pdf},
   Address                   = {Universidade Federal de Pernambuco (UFPE)}
 }
 
@@ -77,7 +77,7 @@
   Title                    = {A Future-Adaptable Password Scheme},
   Author                   = {Niels Provos and David Mazières},
   Year                     = {1999},
-  url={https://www.usenix.org/legacy/event/usenix99/provos/provos_html/index.html},
+  %url={https://www.usenix.org/legacy/event/usenix99/provos/provos_html/index.html},
   Address                   = {USENIX}
 }
 
@@ -86,7 +86,7 @@
   Author                   = {Leandro Côrte},
   Year                     = {2002},
   Address                   = {Universidade Federal do Rio Grande do Sul (UFRGS)},
-  url={https://lume.ufrgs.br/handle/10183/3375}
+  %url={https://lume.ufrgs.br/handle/10183/3375}
 }
 
 %http://revistas.ung.br/index.php/computacaoaplicada/article/viewFile/1950/1545
@@ -170,7 +170,7 @@
   Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
-  url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
+  %url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
 }
 
 %https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&ved=2ahUKEwiI3uzh9M7kAhXTKrkGHT2nBgcQFjABegQIAxAC&url=http%3A%2F%2Frevistapensar.com.br%2Ftecnologia%2Fpasta_upload%2Fartigos%2Fa147.pdf&usg=AOvVaw056AquBC_nDiAR9IDjYeEc
@@ -185,7 +185,7 @@
   Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
-  url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
+  %url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
 }
 
 %Faculdade de Engenharia da Universidade do Porto
@@ -295,5 +295,5 @@
   Title                   = {Mashup Mania with Google Maps},
   Author                  = {Geospatial},
   Year                    = {2009},
-  Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
+%  Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
 }
