--- a/text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex
@@ -23,7 +23,7 @@ O fluxo para fornecer o \textit{tracking} do pedido em tempo real, desde o momen
 
 Neste cenário, ao ler o código QR impresso na comanda o motoboy é direcionado para a \textit{route}: \textit{/deliveries/1/dispatched} (\autoref{alg:funcDispatched}), alterando seu \textit{status} para \textit{DISPATCHED} e executando uma nova \textit{route}: \textit{/deliveries/1/view}, onde o parâmetro solicitado para ambas é o código da entrega.
 
-\begin{lstlisting}[caption={Delivery Routes - Dispatched}, style=htmlcssjs, label=alg:funcDispatched]
+\begin{lstlisting}[caption={Delivery Routes - Função de despacho da entrega}, style=htmlcssjs, label=alg:funcDispatched]
 public function dispatched($id) {
     $delivery = Delivery::find($id);
     $delivery->update(['status' => 'DISPATCHED']);
@@ -57,7 +57,7 @@ Para obter a rota entre dois pontos e exibi-la no mapa, necessário utilizar o s
 
 Começando pelo \textit{DirectionsService}, o seu funcionamento é bem simples. Basta informar um objeto \textit{google.maps.DirectionsRequest}, o qual irá conter o ponto de origem e destino (\autoref{alg:currentPosition}), e o meio de transporte (carro, a pé, bicicleta ou transporte público), que ele irá retornar um objeto \textit{google.maps.DirectionsResult}, o qual contém as informações da rota, e o \textit{google.maps.DirectionsStatus}, que por sua vez define o estado final da requisição. Ele pode indicar sucesso (\textit{OK}), sem resultados (\textit{ZERO\_RESULTS}), erro (\textit{INVALID\_REQUEST} ou \textit{REQUEST\_DENIED}), etc.
 
-\begin{lstlisting}[caption={Delivery Routes - Current position}, style=htmlcssjs, label=alg:currentPosition]
+\begin{lstlisting}[caption={Delivery Routes - Função de localização do usuário}, style=htmlcssjs, label=alg:currentPosition]
 navigator.geolocation.getCurrentPosition(position);
 
 function success(position) {
@@ -65,9 +65,20 @@ function success(position) {
 };
 \end{lstlisting}
 
-Para adicionar os pontos de parada durante a rota, adquiridos através da \textit{route}: \textit{/delivering/1}, é preciso informar um \textit{array} de \textit{google.maps.DirectionsWaypoint} (\autoref{alg:waypoints}), que são alguns pontos pré-definidos no meio do trajeto no objeto \textit{DirectionsRequest} antes de passá-lo para o \textit{directionsService.route}.
+Para adicionar os pontos de parada durante a rota, adquiridos através da \textit{route}: \textit{/delivering/1} (\autoref{alg:pedidosEntrega}), que retorna todos os pedidos da entrega solicitada, é preciso informar uma lista de objetos \textit{google.maps.DirectionsWaypoint} (\autoref{alg:waypoints}), que são alguns pontos pré-definidos no meio do trajeto no objeto \textit{DirectionsRequest} antes de passá-lo para o \textit{directionsService.route}.
 
-\begin{lstlisting}[caption={Delivery Routes - Waypoints}, style=htmlcssjs, label=alg:waypoints]
+\begin{lstlisting}[caption={Delivery Routes - Route pedidos da entrega}, style=htmlcssjs, label=alg:pedidosEntrega]
+Route::get('/delivering/{id}', function ($delivery_id) {
+    return new OrdersResource(
+        DB::table('orders')
+            ->leftJoin('deliveries_orders', 'orders.id', '=', 'deliveries_orders.order_id')
+            ->where('deliveries_orders.delivery_id', $delivery_id)
+            ->get());
+});
+\end{lstlisting}
+
+\newpage
+\begin{lstlisting}[caption={Delivery Routes - Preenchimento dos pontos de parada}, style=htmlcssjs, label=alg:waypoints]
 $.getJSON(json, function(pontos) {
     $.each(pontos.data, function(index, ponto) {
         waypoints[position] = {
@@ -78,10 +89,9 @@ $.getJSON(json, function(pontos) {
 });
 \end{lstlisting}
 
-\newpage
 Já o \textit{DirectionsRenderer}, basicamente, fica responsável por renderizar o resultado fornecido pelo \textit{DirectionsService} (\autoref{alg:directionsService}).
 
-\begin{lstlisting}[caption={Delivery Routes - Directions Service}, style=htmlcssjs, label=alg:directionsService]
+\begin{lstlisting}[caption={Delivery Routes - Requisição de renderização do mapa}, style=htmlcssjs, label=alg:directionsService]
 var request = {
     origin: currentPosition,
     waypoints: waypoints,
@@ -98,7 +108,7 @@ directionsService.route(request, function(result, status) {
 
 O cálculo de distância e tempo (\autoref{alg:computeTotalDistance}), exibido na \autoref{fig:drRotaEntregaInicio}, é a última etapa. Nele é computado o tempo de deslocamento entre os pontos e também o tempo dos trâmites de entrega do produto para o cliente final, estimado em 5 minutos cada.
 
-\begin{lstlisting}[caption={Delivery Routes - Waypoints}, style=htmlcssjs, label=alg:computeTotalDistance]
+\begin{lstlisting}[caption={Delivery Routes - Função de cálculo do deslocamento}, style=htmlcssjs, label=alg:computeTotalDistance]
 function computeTotalDistance(result) {
     var totalDist = 0;
     var totalTime = -300; // retorno
