--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -3,14 +3,13 @@
 \chapter{FERRAMENTAS}
 Este Capítulo descreve as ferramentas utilizadas para desenvolvimento do presente trabalho.
 
-%\section{Maps JavaScript API}
-
 \section{CGI (Common Gateway Interface)}
 \input{text-elements/textuais/desenvolvimento/ferramentas/cgi.tex}
 
 \section{PHP}
 \input{text-elements/textuais/desenvolvimento/ferramentas/php.tex}
 
+\newpage
 \section{Laravel}
 \input{text-elements/textuais/desenvolvimento/ferramentas/laravel.tex}
 
