--- a/text-elements/textuais/conclusao.tex
+++ b/text-elements/textuais/conclusao.tex
@@ -1,13 +1,11 @@
-% CONCLUSÃO--------------------------------------------------------------------
-
 \chapter{CONCLUSÃO E TRABALHOS FUTUROS}
-O desenvolvimento do trabalho possibilitou explorar um grande acervo tecnológico, começando pela interação por meio de rotas com a Google Maps, gerando automaticamente sugestões de percursos baseados no fluxo do trânsito do momento. Foi possível perceber também que, por muitas vezes, é uma grande vantagem optar por essa tecnologia, pois contempla 99\% de cobertura no mundo, além do fato de existir uma documentação de fácil acesso para realizar a integração de aplicações web com as APIs de geolocalização. Por esse motivo, optou-se pelo desenvolvimento da aplicação em plataforma web, além do fato de existirem \textit{frameworks} como Laravel, Vue.js e Bootstrap que aceleram muito mais esse processo.
+O desenvolvimento do trabalho possibilitou explorar um grande acervo tecnológico, começando pela interação por meio de rotas com a Google Maps, gerando automaticamente sugestões de percursos baseados no fluxo do trânsito do momento. Foi possível perceber também que, por muitas vezes, é uma grande vantagem optar por essa tecnologia, pois contempla 99\% de cobertura no mundo, além do fato de existir uma documentação de fácil acesso para realizar a integração de aplicações web com as APIs de geolocalização. Por esse motivo, optou-se pelo desenvolvimento da aplicação em plataforma web, além do fato de existirem \textit{frameworks} como Laravel e Bootstrap que aceleram esse processo.
 
 Durante o desenvolvimento, o tópico que necessitou maior atenção foi o cálculo de direções entre dois ou mais locais, por meio do Directions Service, um serviço cedido pelo Google Maps JavaScript API, que recebe solicitações de direção e retorna um caminho eficiente. Por utilizar \textit{waypoints} e \textit{current position}, a etapa de desenvolvimento do mesmo foi a mais complexa.
 
 De acordo com a análise realizada durante o estudo dos conceitos utilizados, observou-se que as grandes empresas de comércio online pecam no pós-venda, atrasando a entrega de seus produtos. Com esta motivação, foi possível criar um meio de melhorar essa logística e recomendar aos usuários um planejamento, instigando a insatisfação de seus clientes.
 
-Em meio a este cenário de grande crescimento de pedido online e \textit{delivery} de produtos, a aplicação Delivery Routes, desenvolvido neste trabalho, é uma ferramenta com grande possibilidade de aceitação no mercado por diversos fatores, começando pelo fato de oferecer um serviço integrado aos \textit{deliveries} já instalados e operantes nos estabelecimentos, de maneira organizada e documentada, o que prevê maior praticidade para a \textit{software house} realizar a integração entre os serviços.
+Em meio a este cenário de grande crescimento de pedido online e \textit{delivery} de produtos, a aplicação Delivery Routes, desenvolvido no presente trabalho, é uma ferramenta com grande possibilidade de aceitação no mercado por diversos fatores, começando pelo fato de oferecer um serviço integrado aos \textit{deliveries} já instalados e operantes nos estabelecimentos, de maneira organizada e documentada, o que prevê maior praticidade para a \textit{software house} realizar a integração entre os serviços.
 
 %O aplicativo permite também que o 
 %A aplicação torna mais fácil para o 
