--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -1,17 +1,20 @@
-% DESENVOLVIMENTO DA APLICAÇÃO-------------------------------------------------------------------
-
 \chapter{DESENVOLVIMENTO DA APLICAÇÃO}
 %https://rafaell-lycan.com/2015/construindo-restful-api-laravel-parte-1/
-A proposta deste trabalho é a construção de uma API REST, a qual possibilita a coleta das coordenadas geográficas dos pedidos gerados nos estabelecimentos. Além disso, objetiva desenvolver uma aplicação para gerenciar, por meio de um painel de controle, a logística das entregas. Por fim, pretende fornecer ao motoboy um módulo de entregas, possibilitando a ele observar no mapa a rota e os pontos de parada que devem ser percorridos. Tal processo ocorre totalmente em tempo real, o que possibilita agilidade e segurança quanto ao destino final.
+
+%%% Rev-Madalozzo: "pedidos gerados nos estabelicmentos"- Q estabelecimentos? Em algum lugar no texto, antes deste ponto, você comenta sobre os estabelecimentos? Quem são eles? Como eles vão se comunicar contigo? Etc.
+%%% Rev-Madalozzo: "entregas" - Que tipo de entregas? Entregas de comida? Entregas de frete? Falou sobre isso antes em algum lugar e que eu tenha perdido a leitura?
+
+O presente trabalho apresenta uma API REST, a qual possibilita a coleta das coordenadas geográficas dos pedidos gerados nos estabelecimentos. Além disso, apresenta o desenvolvimento de uma aplicação para gerenciar, por meio de um painel de controle, a logística das entregas. Tal aplicação tem por objetivo fornecer ao motoboy um módulo de entregas, possibilitando a ele observar no mapa a rota e os pontos de parada que devem ser percorridos. Todo o processo de comunicação da aplicação ocorre totalmente em tempo real, o que possibilita agilidade e segurança quanto ao destino final.
 
 \section{Softwares utilizados}
 
-Esta Seção apresenta os softwares utilizados na etapa de codificação da aplicação. Para diminuir o custo de desenvolvimento, optou-se pela utilização de tecnologias gratuitas. Outro importante ponto na escolha das ferramentas é a questão de documentação disponível na comunidade web.
+Esta Seção apresenta os softwares utilizados na etapa de codificação da aplicação. Para diminuir o custo de desenvolvimento, optou-se pela utilização de tecnologias gratuitas. 
+%Outro importante ponto na escolha das ferramentas é a questão de documentação disponível na comunidade web.
 
 \begin{itemize}
     \item PhpStorm: IDE completa de desenvolvimento para projetos codificados com a linguagem de programação PHP;
     \item Composer: gerenciador de pacotes em nível de aplicativo, que fornece um formato padrão para gerenciar dependências de software PHP e bibliotecas necessárias;
-    \item Cmder: console para execução de linhas de comandos para o sistema operacional Windows. Com essa ferramenta é possível executar comandos Unix diretamente no Windows; %(\textit{ls}, \textit{rm}, \textit{mv} e etc)
+    \item Cmder: console para execução de linhas de comandos para o sistema operacional Windows. Com essa ferramenta é possível executar comandos Unix diretamente no Windows;
     \item Laravel: \textit{framework} de programação baseada na linguagem PHP;
     \item Artisan CLI: interface de linha de comando incluída no Laravel, fornecendo vários comandos úteis durante a criação da aplicação, por exemplo: configuração de ambiente, verificar rotas, interagir com a aplicação e criar diversos tipos de arquivos (\textit{Migrations}, \textit{Controllers} e \textit{Models});
     \item Blade: ferramenta para criação de interfaces gráficas, utilizado pelo Laravel como uma ferramenta de \textit{template}, trazendo uma quantidade grande de funcionalidades que ajudam na criação de interfaces interativas;
@@ -23,26 +26,26 @@ Esta Seção apresenta os softwares utilizados na etapa de codificação da apli
 \end{itemize}
 
 \newpage
-Para o desenvolvimento deste trabalho, foi escolhido trabalhar com Laravel 5.8.11, um \textit{framework} com um servidor interno já incluso e invocado através do comando \textit{php artisan serve}, em conjunto com o XAMPP, um servidor independente de plataforma para executar sistemas localmente, que consiste principalmente na base de dados MySQL e os interpretadores para linguagens de \textit{script}: PHP e Perl, o que facilita e agiliza o desenvolvimento. Como o conteúdo estará armazenado  na rede local, o acesso aos arquivos é realizado instantaneamente, ficando disponível no endereço \textit{http://127.0.0.1}.
+Para o desenvolvimento deste trabalho, foi escolhido trabalhar com Laravel 5.8.11, um \textit{framework} com um servidor interno já incluso e invocado através do comando \textit{php artisan serve}, em conjunto com o XAMPP, o que facilita e agiliza o desenvolvimento. Como o conteúdo estará armazenado na rede local, o acesso aos arquivos é realizado instantaneamente, ficando disponível no endereço \textit{http://127.0.0.1}.
 
 A execução do comando \textit{composer create-project --prefer-dist laravel/laravel delivery-routes} no Cmder gera, de forma padronizada, toda a estrutura de um projeto Laravel, apresentada na \autoref{fig:base-projeto}. O uso do Cmder torna o desenvolvimento, via terminal, do sistema operacional Windows mais amigável. Uma vez que esta ferramenta possibilita a execução de comandos Unix em ambiente Microsoft.
 
 \begin{figure}[H]
     \centering
     \caption{Estrutura Laravel}
-    \includegraphics[width=0.5\textwidth]{./dados/figuras/fig6}
+    \includegraphics[width=0.7\textwidth]{./dados/figuras/fig6}
     \fonte{Autor}
     \label{fig:base-projeto}
 \end{figure}
 
 \newpage
-Foi necessária uma série de configurações de ambiente para que se tornasse possível o desenvolvimento da aplicação: primeiramente foi preciso instalar e configurar todas as dependências do PHP para que se pudesse ter acesso a linguagem de programação através do gerenciados de dependências Composer. 
+A montagem do ambiente de desenvolvimento para deixa-lo funcional no \textit{framework} Laravel necessitou de algumas configurações, tais como: primeiramente foi preciso instalar e configurar todas as dependências do PHP para que se pudesse ter acesso a linguagem de programação através do gerenciados de dependências Composer.
 
-Foi optado, por questões de segurança, hospedar o código-fonte do projeto em nuvem, através da plataforma GitHub. A sincronia entre os arquivos locais e o GitHub foi possível com o auxílio do sistema de controle de versões chamado Git, representado visualmente pelo Sourcetree, que deixa o trabalho braçal por linha de comando (\textit{gitbash}) de lado, sendo também necessário sua instalação e configuração na máquina de desenvolvimento. 
+Foi optado, por questões de controle de versionamento do projeto, hospedar o código-fonte do projeto em nuvem, através da plataforma GitHub. A sincronia entre os arquivos locais e o GitHub foi possível com o auxílio do sistema de controle de versões chamado Git, representado visualmente pelo Sourcetree, que deixa o trabalho braçal por linha de comando (\textit{gitbash}) de lado, sendo também necessário sua instalação e configuração na máquina de desenvolvimento. 
 
 O banco de dados escolhido para armazenar os registros foi o MySQL, cuja instalação e configuração ocorreu automaticamente pelo XAMPP. Por último, para ter acesso a manipulação do código, um editor de texto era necessário, optando-se pelo PHPStorm. Esta, uma IDE paga, mas utilizando o e-mail acadêmico da URI, obtive a licença estudantil, terminando assim a fase configuração de ambiente de desenvolvimento e garantindo aptidão para começar os trabalhos.
 
-O próximo passo foi a modelagem dos dados, onde verificou-se que seria necessário a criação das seguintes tabelas com o recurso \textit{Migration}: \textit{users}, \textit{motoboys}, \textit{deliveries}, \textit{payments} e \textit{orders}. Uma sexta tabela chamada de \textit{deliveries\_orders} precisou ser criada para vincular mais de um pedido à cada entrega, onde uma \textit{trigger}, disparada via \textit{after update}, ficou responsável pela atualização do status de cada pedido vinculado à entrega, esta chamada de \textit{tr\_Status\_Orders}, apresentada no \autoref{alg:trigger}.
+O próximo passo foi a modelagem dos dados, onde verificou-se que seria necessário a criação das seguintes tabelas com o recurso \textit{Migration}: \textit{users}, \textit{motoboys}, \textit{deliveries}, \textit{payments} e \textit{orders}. Uma sexta tabela chamada de \textit{deliveries\_orders} precisou ser criada para vincular mais de um pedido à cada entrega, onde uma \textit{trigger}, disparada via \textit{after update}, ficou responsável pela atualização do status de cada pedido vinculado à entrega, esta chamada de \textit{tr\_Status\_Orders}, apresentada no \autoref{alg:trigger}. Na próxima Seção serão abordados os possíveis status de um pedido.
 
 \begin{lstlisting}[caption={Delivery Routes - Trigger tr\_Status\_Orders}, label=alg:trigger, style=SQL]
 CREATE TRIGGER tr_Status_Orders AFTER UPDATE ON `deliveries`
@@ -53,8 +56,13 @@ FOR EACH ROW BEGIN
 END
 \end{lstlisting}
 
-O recurso do Laravel chamado \textit{Migration}, é tem por objetivo gerenciar as mudanças estruturais do banco de dados da aplicação. Para cada tabela, coluna ou índice criados no banco de dados, é possível usar a \textit{migration} para fazer essa operação automática, visando organizar e definir uma sequência de criação das tabelas. Para aplicações com poucas tabelas a utilização de \textit{migrations} para gerenciar a estrutura das tabelas é extremamente útil e válida.
+%%% Rev-Madalozzo: Migration: De um exemplo de criação de uma tabela simples e um com FK que você tenha criado. Explica como se cria (linha de comando artisan) uma migration e como se executa ela. E a importância principal de trabalhar com migrations, versionamento da base de dados. 
 
+%%%Aproveita e comenta sobre seeds, para poder popular tabelas em um ambiente de teste. Cria um seed para uma tabela de tua base e mostra a importancia desta possibilidade para efetuar o desenvolvimento.
+
+O recurso do Laravel chamado \textit{Migration}, tem por objetivo gerenciar as mudanças estruturais do banco de dados da aplicação. Para cada tabela, coluna ou índice criados no banco de dados, é possível usar a \textit{migration} para fazer essa operação automática, visando organizar e definir uma sequência de criação das tabelas. Para aplicações com poucas tabelas a utilização de \textit{migrations} para gerenciar a estrutura das tabelas é extremamente útil e válida.
+
+\newpage
 \section{Módulo de gerenciamento}
 \input{text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex}
 
@@ -68,6 +76,13 @@ O recurso do Laravel chamado \textit{Migration}, é tem por objetivo gerenciar a
 \newpage
 \section{Módulo de entrega}
 \input{text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex}
+
+\newpage
+\section{Controller}
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/controller.tex}
+
+\section{Integração da ferramenta}
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/integracao.tex}
 
 %O trecho de código fonte que é apresentado a seguir demonstra como é o serviço de                login do aplicativo: 
 %, conforme apresenta a figura 19 
